@@ -200,80 +200,6 @@ void TagFolderView::slotTagNewFromABCMenu(const QString& personName)
     tagModificationHelper()->slotTagNew(parent, personName, QLatin1String("im-user"));
 }
 
-void TagFolderView::slotExpandNode()
-{
-/*
-    QModelIndex root                 = this->model()->index(0,0);
-*/
-    QItemSelectionModel* const model = this->selectionModel();
-    QModelIndexList selected         = model->selectedIndexes();
-
-    QQueue<QModelIndex> greyNodes;
-
-    foreach (const QModelIndex& index, selected)
-    {
-        greyNodes.append(index);
-        expand(index);
-    }
-
-    while (!greyNodes.isEmpty())
-    {
-        QModelIndex current = greyNodes.dequeue();
-
-        if (!current.isValid())
-        {
-            continue;
-        }
-
-        int it            = 0;
-        QModelIndex child = current.model()->index(it++, 0, current);
-
-        while (child.isValid())
-        {
-            expand(child);
-            greyNodes.enqueue(child);
-            child = current.model()->index(it++, 0, current);
-        }
-    }
-}
-
-void TagFolderView::slotCollapseNode()
-{
-/*
-    QModelIndex root                 = this->model()->index(0,0);
-*/
-    QItemSelectionModel* const model = this->selectionModel();
-    QModelIndexList selected         = model->selectedIndexes();
-
-    QQueue<QModelIndex> greyNodes;
-
-    foreach (const QModelIndex& index, selected)
-    {
-        greyNodes.append(index);
-        collapse(index);
-    }
-
-    while (!greyNodes.isEmpty())
-    {
-        QModelIndex current = greyNodes.dequeue();
-
-        if (!current.isValid())
-        {
-            continue;
-        }
-
-        int it              = 0;
-        QModelIndex child   = current.model()->index(it++, 0, current);
-
-        while (child.isValid())
-        {
-            collapse(child);
-            greyNodes.enqueue(child);
-            child = current.model()->index(it++, 0, current);
-        }
-    }
-}
-
 void TagFolderView::handleCustomContextMenuAction(QAction* action, const AlbumPointer<Album>& album)
 {
     Album* const a    = album;
